- message/script.js: Modify getMessage function - message/style.css: Change background color of message success and font color of message danger

--- a/user-side/component/message/style.css
+++ b/user-side/component/message/style.css
@@ -11,11 +11,13 @@
 }
 
 .message.success {
-	background-color: rgb(184, 255, 112);
+	/* background-color: rgb(184, 255, 112); */
+	background-color: #14abfa;
 }
 
 .message.danger {
 	background-color: crimson;
+	color: white;
 }
 
 @keyframes showMessage {
