--- a/user-side/user/fines/style.css
+++ b/user-side/user/fines/style.css
@@ -95,13 +95,13 @@ button {
     font-size: 1.2em;
 }
 
-/* .menu a:first-child {
-    color: #14abfa;
-} */
-
-.menu a:nth-child(4) {
+.menu a:first-child {
     color: #14abfa;
 }
+
+/* .menu a:nth-child(4) {
+    color: #14abfa;
+} */
 
 .menu a i {
     font-size: 1.7em;
