Add toggle eye feature to login and sign up

--- a/user-side/component/togglePassword/style.css
+++ b/user-side/component/togglePassword/style.css
@@ -9,3 +9,11 @@
     transform: translateY(-50%);
     cursor: pointer;
 }
+
+#toggleEye-SignUp {
+    position: absolute;
+    top: 57%;
+    right: 40px;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
