--- a/resources/css/table.css
+++ b/resources/css/table.css
@@ -130,3 +130,34 @@ tr:nth-child(odd):not(:first-child) {
 .fa-person-circle-plus{
 	font-size: 3.5rem;
 }
+
+/*CSS for search input button*/
+
+.filters-section{
+	margin-top: 2%;
+	display: flex;
+	justify-content: flex-end;
+}
+
+.dropdown-filters{
+	margin-right: 2%;;
+}
+
+#myDropdown {
+	width: 100%;
+	height: 50%;
+
+}
+
+
+#myInput {
+	background-image: url('../images/search.png');
+	background-size: 6%;
+	background-position: 4% 40%;
+	background-repeat: no-repeat;
+	width: 25%;
+	font-size: 100%;
+	padding: 12px 20px 12px 40px;
+	border: 1px solid #ddd;
+	margin-right: 5%;
+  }
