Add correct relative paths from complaint feature

--- a/user-side/user/complaint/view/index.html
+++ b/user-side/user/complaint/view/index.html
@@ -63,7 +63,7 @@
     <!-- Dashboard heading -->
     <div class="dashboard-heading">
         <div class="panel">
-            <a href="../../user/profile/index.html"
+            <a href="/user-side/user/profile/index.html"
                class="profile-username-nav"
                id="profile-username">
             </a>
