--- a/user-side/user/login/style.css
+++ b/user-side/user/login/style.css
@@ -1,14 +1,40 @@
+html,
+body {
+    font-family: "Lato", sans-serif;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    overflow-x: hidden
+}
+
+.body-container {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
 /*Header*/
 .header {
+    flex: 0 1 auto;
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
     margin-bottom: 20px;
-    margin-right: 20px;
-    margin-left: 2px;
     background-color: #14abfa;
-
 }
+
+.header .ntsf-logo-wrapper {
+    margin-left: 10px;
+}
+
+.header .title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 
 img {
     width: 80px;
@@ -22,13 +48,7 @@ img {
     padding: 15px;
 }
 
-body {
-    font-family: "Lato", sans-serif;
-    background-size: cover;
-    height: 100%;
-    width: 100%;
-    position: fixed;
-}
+
 
 @keyframes spinner {
     0% {
@@ -45,13 +65,12 @@ body {
 }
 
 .wrapper {
+    flex: 1 1 auto;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    min-height: 100%;
-    padding: 20px;
     background-image: url("/resources/images/Background.jpeg");
 }
 
@@ -63,8 +82,8 @@ body {
     background: #fff;
     position: relative;
     padding-bottom: 80px;
+    margin: 0;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
-    margin-bottom: 150px;
 }
 
 .login.loading button {
