--- a/user-side/user/signup/style.css
+++ b/user-side/user/signup/style.css
@@ -1,13 +1,38 @@
+html,
+body {
+    font-family: "Lato", sans-serif;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
+.body-container {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
 /*Header*/
 .header {
+    flex: 0 1 auto;
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
     margin-bottom: 20px;
-    margin-right: 20px;
-    margin-left: 2px;
     background-color: #14abfa;
 
+}
+
+.header .ntsf-logo-wrapper {
+    margin-left: 10px;
+}
+
+.header .title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 img {
@@ -20,14 +45,6 @@ img {
     width: 100px;
     height: 100px;
     padding: 15px;
-}
-
-body {
-    font-family: "Lato", sans-serif;
-    background-size: cover;
-    height: 100%;
-    width: 100%;
-    position: fixed;
 }
 
 @keyframes spinner {
@@ -45,14 +62,13 @@ body {
 }
 
 .wrapper {
-    display: flex;
+    flex: 1 1 auto;
     align-items: center;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    min-height: 100%;
-    padding: 20px;
     background-image: url("/resources/images/Background.jpeg");
+    display: flex;
 }
 
 .sign-up {
@@ -63,13 +79,9 @@ body {
     background: #fff;
     position: relative;
     padding-bottom: 80px;
+    margin: 0;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
-    margin-bottom: 90px;
-    /* left: 50%;
-    top: 50%;
-    margin-left: -25%;
-    position: absolute;
-    margin-top: -25%; */
+    margin: 0 auto;
 }
 
 .sign-up.loading button {
