--- a/user-side/user/payment/style.css
+++ b/user-side/user/payment/style.css
@@ -353,3 +353,38 @@ th {
     height: 80%;
     border-radius: 50%;
 }
+
+/*Payhere form*/
+
+form {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  form input[type="text"],
+  form input[type="submit"] {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  form input[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    cursor: pointer;
+  }
+  
+  form input[type="submit"]:hover {
+    background-color: #45a049;
+  }
+  
+  form br {
+    margin-bottom: 10px;
+  }
+  
